@@ -569,7 +569,8 @@
 #define IDS_SUGGEST_PRESERVEEOL         18008
 #define IDS_PREDIFFER_ERROR             18009
 #define IDS_SUGGEST_IGNORECODEPAGE      18010
-#define IDS_INVALID_DIRECTORY           18011
+#define IDS_DIFFERENT_UNICODINGS        18011
+#define IDS_INVALID_DIRECTORY           18012
 #define IDS_LINEDIFF_NODIFF             18016
 #define IDS_LINEDIFF_NODIFF_CAPTION     18017
 #define IDS_NUM_REPLACED                18032
